leerseiten am Ende des dokuments behoben(letzte Leerseite ist das Glossar!

--- a/Entwurf/Entwurfsdokument/deckblatt.tex
+++ b/Entwurf/Entwurfsdokument/deckblatt.tex
@@ -16,7 +16,7 @@
     
     \end{verbatim}
     \begin{center}
-    \includegraphics[width=0.5\textwidth]{./Bilder/EarablesBild.PNG}
+    \includegraphics[width=0.5\textwidth]{./bilder/EarablesBild.PNG}
     \end{center}
     \begin{verbatim}
       
