Alle aktualisierten Klassen ins Klassenindex aufgenommen und alphapetisch sortiert ( fehlt nur noch Nummerierung)

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -1575,29 +1575,29 @@ Es werden folgende Erweiterungen benötigt:\\
 \hline \multicolumn{2}{r}{\textit{}} \\
 \endfoot
 \hline
-Abstract Class AbstractPushUpActivity & 20\\
+Abstract Class AbstractPushUpActivity & 1\\
 \hline
-Abstract Class AbstractRunningActivity & 20\\
+Abstract Class AbstractRunningActivity & 1\\
 \hline
 Abstract Class AbstractSitUpActivity & 1\\
 \hline
-Abstract Class AbstractStepActivity & 19\\
+Abstract Class AbstractStepActivity & 1\\
 \hline
 Abstract Class BaseModeViewModel & 1\\
 \hline
-Class Accelerometer & 13\\
+Class Accelerometer & 1\\
 \hline
-Class Activity & 18\\
+Class Activity & 1\\
 \hline
-Class ActivityManager & 17\\
+Class ActivityManager & 1\\
 \hline
 Class App & 1\\
 \hline
-Class ButtonEventArgs & 15\\
+Class ButtonEventArgs & 1\\
 \hline
-Class Characteristics & 14\\
+Class Characteristics & 1\\
 \hline
-Class ConfigContainer & 11\\
+Class ConfigContainer & 1\\
 \hline
 Class CountModeActivePage & 1\\
 \hline
@@ -1609,23 +1609,23 @@ Class DBEntry & 1\\
 \hline
 Class DataBaseConnection & 1\\
 \hline
-Class DataEventArgs & 15\\
+Class DataEventArgs & 1\\
 \hline
 Class DataOverviewPage & 1\\
 \hline
 Class DataOverviewViewModel & 1\\
 \hline
-Class DeviceEventArgs & 14\\
+Class DeviceEventArgs & 1\\
 \hline
-Class EarablesConnection & 6\\
+Class EarablesConnection & 1\\
 \hline
 Class ExceptionHandlingViewModel & 1\\
 \hline
-Class Gyroscope & 13\\
+Class Gyroscope & 1\\
 \hline
 Class HomeMenuItem & 1\\
 \hline
-Class IMUDataEntry & 12\\
+Class IMUDataEntry & 1\\
 \hline
 Class ImportExportPage & 1\\
 \hline
@@ -1651,7 +1651,7 @@ Class PushUpActivityThreshold & 1\\
 \hline
 Class PushUpEventArgs & 1\\
 \hline
-Class RunningActivityThreshold & 20\\
+Class RunningActivityThreshold & 1\\
 \hline
 Class RunningEventArgs & 1\\
 \hline
@@ -1665,15 +1665,15 @@ Class SettingsService & 1\\
 \hline
 Class SettingsViewModel & 1\\
 \hline
-Class SitUpActivity & 1\\
+Class SitUpActitvityThreshold & 1\\
 \hline
-Class SitUpActivityThreshold & 1\\
+Class SitUpEventArgs & 1\\
 \hline
-Class StepActivityActivityThreshold & 19\\
+Class StepActiveModePage & 1\\
 \hline
-Class StepEventActivity & 1\\
+Class StepActivityThreshold & 1\\
 \hline
-Class StepModeActivePage & 1\\
+Class StepEventArgs & 1\\
 \hline
 Class StepModePage & 1\\
 \hline
@@ -1681,9 +1681,9 @@ Class StepModeViewModel & 1\\
 \hline
 Class User & 1\\
 \hline
-Enumeration LPF\_Accelerometer & 10\\
+Enumeration LPF\_Accelerometer & 1\\
 \hline
-Enumeration LPF\_Gyroscope & 10\\
+Enumeration LPF\_Gyroscope & 1\\
 \hline
 Enumeration MenuItemType & 1\\
 \hline
@@ -1693,19 +1693,21 @@ Interface ActivityArgs & 1\\
 \hline
 Interface CountableActivityArgs & 1\\
 \hline
-Interface IActivityManager & 17\\
+Interface IActivityManager & 1\\
 \hline
 Interface IDataBaseConnection & 1\\
 \hline
-Interface IEarablesConnection & 5\\
+Interface IEarablesConnection & 1\\
 \hline
-Interface IManager & 16\\
+Interface IManager & 1\\
 \hline
 Interface ISettingsService & 1\\
 \hline
-Static Class Constants & 9\\
+Settings Service & 1\\
 \hline
-Static Class IMUDataExtractor & 12\\
+Static Class Constants & 1\\
+\hline
+Static Class IMUDataExtractor & 1\\
 \hline
 \end{longtable}
 
